# anyplot

./: README.md  pyproject.toml
src/anyplot/: __init__.py
