[project]
name = "anyplot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "om-hands", email = "okumuramasaki.hands@gmail.com" }
]
dependencies = [
    "py-xrd-visualize>=0.2.0",
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
anyplot = "anyplot:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anyplot"]
